zeit.content.cp changes
=======================

0.38.1 (unreleased)
-------------------

- Fehler bei Regeln ("cp_type is undefined") verhindern (#7444).


0.38.0 (2010-06-09)
-------------------

- Prevent error during refresh when feed cannot be checked out (#7313).
- Participate in the zeit.relation index (for #6160).
- New properties for RSS-Block: show_supertitle (#7390), time_format (#6936).
- Update Header-Image/Snapshot XML reference if image metadata change (#7402).


0.37.0 (2010-06-02)
-------------------

- Header-Image und Snapshot werden im XML anstatt im DAV gespeichert (#7325).
- Fehler bei Regeln ("cp_type is undefined") verhindern (#7192).


0.36.0 (2010-05-18)
-------------------

- RSS-Block: Felder für Feed-Icon und Teaserbild (#7259).


0.35.1 (2010-05-17)
-------------------

- Fixed test for zeit.brightcove >= 0.3.0 (#7241)


0.35.0 (2010-05-03)
-------------------

- Errors in editors actions are logged as warning now.

- Fullgraphical block doesn't break CPE if the referenced object is removed
  (#7093).

- Added Snapshot image (#7181)


0.34.0 (2010-04-09)
-------------------

- Brightcove-Videos integriert (#6881).

- Favicon zu RSS-Feed speichern (#6937).

- Using versions from the ZTK.


0.33.0 (2010-03-10)
-------------------

- »Doubletten vermeiden« kann wieder deaktiviert werden (#6731)

- Asset-Tab für CPs aktiviert (#6876).

- Die Felder CAP-Kontext und CAP-Titel von der Centerpage direkt entfernt und
  auf allen Objekten mit Standardmetadaten verfügbar gemacht (#6923).

- Ist ein Objekt im RSS-Feed kommt ein freier Teaser dieses Objekts nicht mehr
  in den RSS-Feed und umgekehrt (#6724).

  
0.32.1 (2010-02-23)
-------------------

- Anzahl der Feeditems mind. so groß wie der Aufmacher (#6865)

0.32.0 (2010-02-08)
-------------------

- ``cp_extra`` Block hinzugefügt: solr-month (#6749)

- ``cp_extra`` Block hinzugefügt: dwds-ticker (#6749)

- ``cp_extra`` Block hinzugefügt: recensionsearch
